# dfs

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  setup.sh
include/: Socket.h
include/api/: Socket.h  file.h  ftp.h
include/api/fs/: file.h  timestamp.h
include/api/ft/: ft-types.h
include/exceptions/: fs.h  misc.h  socket.h
include/protocols/: ftp.h  htp.h  stp.h
include/util/: overlap.h
resources/: server-file
src/: client.cpp  server.cpp
src/api/exceptions/: fs.cpp  misc.cpp  socket.cpp
src/api/fs/: DirectoryScanner.cpp  DirectoryScanner.h  FileTimeIndexer.cpp  FileTimeIndexer.h  IndexFileIterator.cpp  IndexFileIterator.h  Path.cpp  Path.h  file.cpp  timestamp.cpp
src/api/ft/: FTIndex.cpp  FTIndex.h  FTIndexReader.cpp  FTIndexReader.h  FTIndexWriter.cpp  FTIndexWriter.h  FTIndexer.cpp  FTIndexer.h  FTQueue.cpp  FTQueue.h  FileIndex.cpp  FileIndex.h  FileIndexReader.cpp  FileIndexReader.h  FileIndexWriter.cpp  FileIndexWriter.h  FileIndexer.cpp  FileIndexer.h  IndexFileIterator.cpp  IndexFileIterator.h  __FTIndexer.cpp  __FTIndexer.h  timestamp.cpp
src/api/socket/: Client.cpp  Client.h  Server.cpp  Server.h
src/api/sockio/: Client.cpp  Client.h  FileReceiver.cpp  FileReceiver.h  FileSender.cpp  FileSender.h  HashReceiver.cpp  HashReceiver.h  HashSender.cpp  HashSender.h  Server.cpp  Server.h  SocketFileHashReader.cpp  SocketFileHashReader.h  SocketFileHashSender.cpp  SocketFileHashSender.h  SocketFileReader.cpp  SocketFileReader.h  SocketFileSender.cpp  SocketFileSender.h  SocketFileStatusReader.cpp  SocketFileStatusReader.h  SocketFileStatusSender.cpp  SocketFileStatusSender.h  StatusReceiver.cpp  StatusReceiver.h  StatusSender.cpp  StatusSender.h
src/api/util/: HTPBuilder.cpp  HTPBuilder.h  STPBuilder.cpp  STPBuilder.h
src/client/: Client.cpp  Client.h  client.cpp
src/fs/: DirectoryScanner.cpp  DirectoryScanner.h
src/server/: Server.cpp  Server.h  server.cpp
src/sockio/: SocketFileReader.h  SocketFileSender.h
test/: main_test.cpp
test/api/fs/: DirectoryScannerTest.cpp  DirectoryScannerTest.h  DirectoryScanner_test.cpp  FileTimeIndexer.h  FileTimeIndexerTest.cpp  FileTimeIndexerTest.h  FileTimeIndexer_test.cpp  IndexFileIteratorTest.cpp  IndexFileIteratorTest.h  IndexFileIterator_test.cpp  PathTest.cpp  PathTest.h  Path_test.cpp  file_test.cpp  timestamp_test.cpp
test/api/ft/: FTIndexReaderTest.cpp  FTIndexReaderTest.h  FTIndexReader_test.cpp  FTIndexWriterTest.cpp  FTIndexWriterTest.h  FTIndexWriter_test.cpp  FTIndexerTest.cpp  FTIndexerTest.h  FTIndexer_test.cpp
test/api/sockio/: FileIOTest.cpp  FileIOTest.h  FileIO_test.cpp  HashIOTest.cpp  HashIOTest.h  HashIO_test.cpp  SocketFileIOTest.cpp  SocketFileIOTest.h  SocketFileIO_test.cpp  SocketFileReader_test.cpp  SocketFileSender_test.cpp  StatusIOTest.cpp  StatusIOTest.h  StatusIO_test.cpp
test/include/: BasicTest.h  ResourceTest.h  test-util.cpp  test-util.h
test/mock-fs/: mock-index-file
test/resources/FTIndexReaderTest/: invalid
test/resources/FTIndexWriterTest/: multiple-ref  single-ref
